// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atom - IconWithCounter Should not show more than nine (9) unread inboxes 1`] = `
<div
  className="IconWithCounter"
>
  <div
    className="IconWithCounter-counter IconWithCounter-counter-animation"
    onAnimationEnd={[Function]}
  >
    9+
  </div>
</div>
`;

exports[`Atom - IconWithCounter Should not show the counter when there are no unread messages 1`] = `
<div
  className="IconWithCounter"
/>
`;

exports[`Atom - IconWithCounter Should render 1`] = `
<div
  className="IconWithCounter"
>
  <div
    className="IconWithCounter-counter IconWithCounter-counter-animation"
    onAnimationEnd={[Function]}
  >
    1
  </div>
</div>
`;
